[+] ajout image BT, Wifi, Configuration [*] modif design

--- a/InterfaceIOT/src/app/app.component.html
+++ b/InterfaceIOT/src/app/app.component.html
@@ -5,12 +5,14 @@
   </h1>
 </div>
 <!-- Left Panel -->
-<div class="row">
-  <div class="left_panel col">
-    <app-list-devices></app-list-devices>
-  </div>
-  <!-- Main (center) Panel -->
-  <div class="main_panel col-8">
-    <app-bezier></app-bezier>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      <app-list-devices></app-list-devices>
+    </div>
+    <!-- Main (center) Panel -->
+    <div class="col">
+      <app-bezier></app-bezier>
+    </div>
   </div>
 </div>
