--- a/InterfaceIOT/src/app/bezier/bezier.component.html
+++ b/InterfaceIOT/src/app/bezier/bezier.component.html
@@ -1,9 +1,8 @@
 <div class="row">
-	<div class="svg_canvas col">
+	<div class="col">
 		<app-svg-canvas></app-svg-canvas>
 	</div>
-
-	<div class="info_commandes col">
+	<div class="col">
 		<app-info-commandes></app-info-commandes>
 	</div>
 </div>
