--- a/src/app/device/modal-device.html
+++ b/src/app/device/modal-device.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="row" *ngIf="this.device.name == 'Robot Dessinateur'">
-      <form>
+      <form style="padding: 1em">
         <div class="form-group">
           <label for="diameter">Diamètre des roues</label>
           <div class="input-group">
